WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304946
v3: [iOS] Safari sometimes crashes under -[UIPreviewTarget initWithContainer:center:transform:]
https://bugs.webkit.org/show_bug.cgi?id=304946
Summary
v3: [iOS] Safari sometimes crashes under -[UIPreviewTarget initWithContainer:...
Wenson Hsieh
Reported
2026-01-05 10:57:49 PST
rdar://167561826
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2026-01-05 13:03:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56100
EWS
Comment 2
2026-01-05 15:53:27 PST
Committed
305129@main
(bfcdfee15158): <
https://commits.webkit.org/305129@main
> Reviewed commits have been landed. Closing PR #56100 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug