Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -1648,10 +1648,6 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 
     _layerTreeTransactionIdAtLastInteractionStart = { };
 
-#if USE(UICONTEXTMENU)
-    [self _removeContextMenuHintContainerIfPossible];
-#endif // USE(UICONTEXTMENU)
-
 #if ENABLE(DRAG_SUPPORT)
     [existingLocalDragSessionContext(_dragDropInteractionState.dragSession()) cleanUpTemporaryDirectories];
     [self teardownDragAndDropInteractions];
@@ -1697,7 +1693,9 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 
     [_webView _updateFixedContainerEdges:WebCore::FixedContainerEdges { }];
 
-    [self _removeContainerForContextMenuHintPreviews];
+#if USE(UICONTEXTMENU)
+    [self _removeContextMenuHintContainerIfPossible];
+#endif
     [self _removeContainerForDragPreviews];
     [self _removeContainerForDropPreviews];
     [self unsuppressSoftwareKeyboardUsingLastAutocorrectionContextIfNeeded];
@@ -1726,7 +1724,9 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 
 - (void)cleanUpInteractionPreviewContainers
 {
-    [self _removeContainerForContextMenuHintPreviews];
+#if USE(UICONTEXTMENU)
+    [self _removeContextMenuHintContainerIfPossible];
+#endif
 }
 
 - (void)_cancelPendingKeyEventHandlers:(BOOL)handled
@@ -6150,7 +6150,9 @@ static void logTextInteraction(const char* methodName, UIGestureRecognizer *loup
 
     [self _elementDidBlur];
     [self _cancelLongPressGestureRecognizer];
-    [self _removeContainerForContextMenuHintPreviews];
+#if USE(UICONTEXTMENU)
+    [self _removeContextMenuHintContainerIfPossible];
+#endif
     [self _removeContainerForDragPreviews];
     [self _removeContainerForDropPreviews];
     [_webView _didCommitLoadForMainFrame];
